trying to fix form radio button spacing

--- a/kinetiplants/styles/styles.css
+++ b/kinetiplants/styles/styles.css
@@ -488,7 +488,7 @@ select {
 }
 
 input[type="radio"] {
-  margin: auto;
+  margin-left: 1em;
 }
 
 textarea {
